# CryptoNorm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
scripts/: capture_coinbase.py  capture_phase3.py  save_fixtures_phase3.py
src/cryptonorm/: __init__.py
src/cryptonorm/api/: app.py  state.py
src/cryptonorm/api/static/: index.html
src/cryptonorm/common/: config.py  errors.py  logging.py  schemas.py  shutdown.py  types.py
src/cryptonorm/ingest/: base.py  binance.py  coinbase.py  kraken.py  reconnect.py  registry.py
src/cryptonorm/normalize/: binance.py  coinbase.py  kraken.py
src/cryptonorm/pipeline/: consumer.py  producer.py  redis_state.py  serde.py  topics.py
src/cryptonorm/risk/: alerts.py  book.py  pnl.py  positions.py  recon.py  spread.py  staleness.py
src/cryptonorm/services/: run_api.py  run_ingest.py  run_pipeline.py  run_sim.py
src/cryptonorm/sim/: paper_fills.py
tests/: conftest.py  test_alerts.py  test_book.py  test_gap_detection.py  test_kraken_checksum.py  test_normalize_binance.py  test_normalize_coinbase.py  test_normalize_kraken.py  test_pnl.py  test_positions.py  test_recon.py  test_reconnect.py  test_serde.py  test_spread.py  test_staleness.py
tests/fixtures/: binance_depth_update.json  binance_rest_snapshot.json  binance_trade.json  coinbase_l2_snapshot.json  coinbase_l2_update.json  coinbase_trade.json  kraken_assetpairs.json  kraken_book_snapshot.json  kraken_book_update.json  kraken_trade.json
